ClockViewController is back to visable normal

--- a/Views/PreFireViewController/PreFireViewController.storyboard
+++ b/Views/PreFireViewController/PreFireViewController.storyboard
@@ -13,7 +13,7 @@
         <!--Pre Fire View Controller-->
         <scene sceneID="XBs-S6-72d">
             <objects>
-                <viewController storyboardIdentifier="PreFireViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="tAH-Ij-2NC" customClass="PreFireViewController" customModule="RealmTimers" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="boom" useStoryboardIdentifierAsRestorationIdentifier="YES" id="tAH-Ij-2NC" customClass="PreFireViewController" customModule="RealmTimers" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="RPd-nm-hYZ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
