--- a/Views/ClockViewController/ClockViewController.storyboard
+++ b/Views/ClockViewController/ClockViewController.storyboard
@@ -82,11 +82,11 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <connections>
-                                            <action selector="showPreFireTapped:" destination="ljv-3F-WUT" eventType="touchUpInside" id="ugA-mV-2Q7"/>
+                                            <action selector="showPreFireTapped:" destination="ljv-3F-WUT" eventType="touchUpInside" id="LEe-DW-uhx"/>
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="0.066666666669999999" green="0.22352941179999999" blue="0.2784313725" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -108,60 +108,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QQ9-oc-rWb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="5460.8695652173919" y="115.84821428571428"/>
-        </scene>
-        <!--PreFireViewController-->
-        <scene sceneID="bSx-i6-RUz">
-            <objects>
-<<<<<<< HEAD
-                <viewControllerPlaceholder storyboardIdentifier="PreFireViewController" storyboardName="PreFireViewController" referencedIdentifier="PreFireViewController" id="aST-d1-bTq" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Amf-ww-hRW" userLabel="First Responder" sceneMemberID="firstResponder"/>
-=======
-                <viewController storyboardIdentifier="boom" useStoryboardIdentifierAsRestorationIdentifier="YES" id="tAH-Ij-2NC" customClass="PreFireViewController" customModule="RealmTimers" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="RPd-nm-hYZ">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JVY-CB-3gB">
-                                <rect key="frame" x="20" y="44" width="50" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="tintColor" red="0.60788255710000005" green="0.62530738340000003" blue="0.58675157909999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <state key="normal" image="delete"/>
-                                <connections>
-                                    <action selector="closeTapped:" destination="tAH-Ij-2NC" eventType="touchUpInside" id="l3J-sg-9JP"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oAG-If-j2s">
-                                <rect key="frame" x="20" y="720" width="374" height="108"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="47"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ih1-oo-q4Z" customClass="CircularProgressView" customModule="RealmTimers" customModuleProvider="target">
-                                <rect key="frame" x="157" y="173" width="100" height="100"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="4Z6-11-zy7"/>
-                                    <constraint firstAttribute="height" constant="100" id="eC5-FF-WMP"/>
-                                </constraints>
-                            </view>
-                        </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="ih1-oo-q4Z" firstAttribute="centerX" secondItem="RPd-nm-hYZ" secondAttribute="centerX" id="Fa4-IC-Jbr"/>
-                            <constraint firstItem="ih1-oo-q4Z" firstAttribute="top" secondItem="b15-2T-0IT" secondAttribute="top" constant="129" id="Ox9-CS-EWq"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="b15-2T-0IT"/>
-                    </view>
-                    <connections>
-                        <outlet property="circularProgressView" destination="ih1-oo-q4Z" id="wrt-RO-j7B"/>
-                        <outlet property="pfDuration" destination="oAG-If-j2s" id="Jrk-PS-gvd"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9F2-7H-dGJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
->>>>>>> parent of 4997beb... finished cleanup
-            </objects>
-            <point key="canvasLocation" x="6279.7101449275369" y="108.48214285714285"/>
         </scene>
     </scenes>
     <resources>
