--- a/Views/MainViewController/Base.lproj/SettingsViewController~.storyboard
+++ b/Views/MainViewController/Base.lproj/SettingsViewController~.storyboard
@@ -7,6 +7,7 @@
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
+        <capability name="iOS 13.0 system colors" minToolsVersion="11.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <array key="LibreBaskerville-Regular.ttf">
@@ -120,7 +121,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
-                                    <segue destination="Usr-f7-m4p" kind="show" id="eaE-be-X5k"/>
+                                    <segue destination="DOe-4P-un2" kind="show" id="eaE-be-X5k"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -159,16 +160,35 @@
             </objects>
             <point key="canvasLocation" x="3825" y="644"/>
         </scene>
-        <!--SettingsViewController-->
-        <scene sceneID="7qJ-po-VSB">
+        <!--Settings View Controller-->
+        <scene sceneID="oFd-MZ-bfG">
             <objects>
-                <viewControllerPlaceholder storyboardName="SettingsViewController" id="Usr-f7-m4p" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="bWg-dF-3T0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <viewController id="DOe-4P-un2" customClass="SettingsViewController" customModule="RealmTimers" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="epC-oC-TaC">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aaT-WI-0Up">
+                                <rect key="frame" x="32" y="22" width="22" height="22"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="tintColor" cocoaTouchSystemColor="systemRedColor"/>
+                                <state key="normal" image="delete.left.fill" catalog="system"/>
+                                <connections>
+                                    <action selector="closeTapped:" destination="DOe-4P-un2" eventType="touchUpInside" id="Y0b-U2-d4t"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" cocoaTouchSystemColor="systemGrayColor"/>
+                        <viewLayoutGuide key="safeArea" id="xcI-FD-oql"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="g37-hc-Xrw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4492.753623188406" y="234.375"/>
         </scene>
     </scenes>
     <resources>
+        <image name="delete.left.fill" catalog="system" width="64" height="52"/>
         <image name="duration-icon" width="18" height="19"/>
         <image name="fab" width="60" height="60"/>
         <image name="wakeup icon" width="18" height="19"/>
