--- a/Views/MainViewController/Base.lproj/SettingsViewController.storyboard
+++ b/Views/MainViewController/Base.lproj/SettingsViewController.storyboard
@@ -18,15 +18,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aaT-WI-0Up">
-                                <rect key="frame" x="32" y="22" width="22" height="22"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="tintColor" cocoaTouchSystemColor="systemRedColor"/>
-                                <state key="normal" image="delete.left.fill" catalog="system"/>
-                                <connections>
-                                    <action selector="closeTapped:" destination="DOe-4P-un2" eventType="touchUpInside" id="Y0b-U2-d4t"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Default duration:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="krw-Kb-UFG">
                                 <rect key="frame" x="118" y="102" width="179" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -41,6 +32,15 @@
                                 <color key="textColor" name="BackgroundColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aaT-WI-0Up">
+                                <rect key="frame" x="20" y="44" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="tintColor" name="DarkBackgroundColor"/>
+                                <state key="normal" image="delete"/>
+                                <connections>
+                                    <action selector="closeTapped:" destination="DOe-4P-un2" eventType="touchUpInside" id="Y0b-U2-d4t"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="systemGrayColor"/>
                         <viewLayoutGuide key="safeArea" id="xcI-FD-oql"/>
@@ -52,9 +52,12 @@
         </scene>
     </scenes>
     <resources>
-        <image name="delete.left.fill" catalog="system" width="64" height="52"/>
+        <image name="delete" width="50" height="50"/>
         <namedColor name="BackgroundColor">
             <color red="0.95294117647058818" green="0.95294117647058818" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="DarkBackgroundColor">
+            <color red="0.0078431372549019607" green="0.054901960784313725" blue="0.20784313725490197" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
